:added the service section

--- a/index.html
+++ b/index.html
@@ -29,18 +29,88 @@
 
     <div class="about-section">
         <div>
-            <img src="/portfolio/public/Web Designs.png" alt="" style="width: 500px; height: 500px; border-radius: 50px;">
+            <img src="https://images.unsplash.com/photo-1726930095303-4aac9ba8bb74?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0NHx8fGVufDB8fHx8fA%3D%3D" alt=""
+                style="width: 500px; height: 500px; border-radius: 50px;">
         </div>
         <div id="about-section-text">
             <p>About me</p>
             <h1>A Fullstack software developer</h1>
-            <p style="width: 60%;">This is a story of a young man who wanted to be rich. NOw, what ddo you think? did the man make it </p>
+            <p style="width: 60%;">But I must explain to you how all this mistaken idea of denouncing pleasure and
+                praising pain was born and I will give you a complete account of the system, and expound the actual
+                teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects,
+                dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to
+                pursue pleasure rationally encounter consequences that are extremely painful.</p>
             <button type="button" class="button">View more about me</button>
         </div>
     </div>
 
+
+    <div class="container" style="background-color:brown ;">
+        <div class="services" ">
+            <h1>OUR SERVICES</h1>
+            <p>we provide the best in class services for our customers</p>
+            <!-- SERVICES-box-container -->
+            <div class="s_box_container">
+
+                <!-- box -->
+                <div class="s-box">
+                    <div class="bar"></div>
+                    <!-- img -->
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&">
+                    <!-- box -->
+                    <h1>spend money</h1>
+                    <!-- details -->
+                    <p>track on your daily expense and make your day to life easy</p>
+                    <!-- btn -->
+                    <a href="#" class="s-btn">more</a>
+                </div>
+
+                <!-- box -->
+                <div class="s-box">
+                    <div class="bar"></div>
+                    <!-- img -->
+                    <img src=" https://cdn.mos.cms.futurecdn.net/Vp9WvV7YKdH4k8sKRePcE8.jpg">
+                    <h1>set budget</h1>
+                    <p>make a budget that fit right with you and do most with it</p>
+                    <!-- btn -->
+                    <a href="#" class="s-btn">more</a>
+                </div>
+
+                <!-- box -->
+                <div class="s-box">
+                    <div class="bar"></div>
+                    </dv>
+                    <!-- img -->
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_Grbhcn6Mzmp2yncwopJybKgX99V3Ch7ijQ&s">
+                    <!-- box -->
+                    <h1>security</h1>
+                    <!-- details -->
+                    <p>we store all card info and money safe to make you relax and crazy</p>
+                    <!-- btn -->
+                    <a href="#" class="s-btn">more</a>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+
+
+    </div>
+
+    </div>
+    </div>
+
+
+
+
     <script src="js/main.js">
     </script>
+
+    </div>
 </body>
 
-</html>
+</html
